# Sentinel-Churn-Engine

./: .gitignore  Dockerfile  Makefile  README.md  debug_save.py  debug_write.py  mlflow.db  pipeline_output.txt  pyproject.toml  test_dashboard_inference.py
.github/workflows/: ci.yml
config/: settings.yaml
reports/: churn_profile.html
src/: run_pipeline.py
src/dashboard/: app.py  inference.py
src/ingestion/: loader.py  mock_enterprise_data.py
src/ingestion/sql/: extract_churn_data.sql
src/processing/: cleaner.py
src/profiling/: run_eda.py
tests/: test_inference.py  verify_etl_outcome.py
